manifest/superset-local.yaml
---
# Source: superset/charts/postgresql/templates/primary/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: superset-local-postgresql
  namespace: "superset"
  labels:
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.6.0
    helm.sh/chart: postgresql-16.7.27
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: superset-local
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432

---
# Source: superset/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-local-postgresql-hl
  namespace: "superset"
  labels:
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.6.0
    helm.sh/chart: postgresql-16.7.27
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary

---
# Source: superset/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-local-postgresql
  namespace: "superset"
  labels:
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.6.0
    helm.sh/chart: postgresql-16.7.27
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary

---
# Source: superset/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-local-redis-headless
  namespace: "superset"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.9.4
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "7.0.10"
  annotations:

spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: superset-local

---
# Source: superset/charts/redis/templates/master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-local-redis-master
  namespace: "superset"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.9.4
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "7.0.10"
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
      nodePort: null
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/component: master

---
# Source: superset/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-local
  namespace: superset
  labels:
    app: superset
    chart: superset-0.15.5
    release: superset-local
    heritage: Helm
spec:
  type: NodePort
  ports:
    - port: 8088
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 32088
  selector:
    app: superset
    release: superset-local

---
# Source: superset/templates/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-local-worker
  namespace: superset
  labels:
    app: superset-worker
    chart: superset-0.15.5
    release: superset-local
    heritage: Helm
spec:
  replicas: 0
  selector:
    matchLabels:
      app: superset-worker
      release: superset-local
  template:
    metadata:
      annotations:
        checksum/superset_config.py: b28993e506479bd683b1eb5335831c90eacf0d9523978922830c0d2e3ea024f4
        checksum/superset_bootstrap.sh: ed4f5aab1a7cac42bd79b9acf8eadc7f63b229830a7ef5edeeff05a30cda77dd
        checksum/connections: 10c5fbc7d42f4fdeac36ee316797cc0db4f98e5751c068b10f1363c528d697ef
        checksum/extraConfigs: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/extraSecrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/extraSecretEnv: e527aea4caa9fa8a34ed43dc96ff8576e87db9133fed0faf8b0828c7cd179eac
        checksum/configOverrides: 70c7efb3e8d995bed29fa5c2a5e4bb1b188f7b00528992f585ac0155c808a81a
        checksum/configOverridesFiles: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
      labels:
        app: superset-worker
        release: superset-local
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: superset
          image: "apachesuperset.docker.scarf.sh/apache/superset:5.0.0"
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh","-c",". /app/pythonpath/superset_bootstrap.sh; celery --app=superset.tasks.celery_app:app worker"]
          volumeMounts:
            - name: superset-config
              mountPath: "/app/pythonpath"
              readOnly: true
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - celery -A superset.tasks.celery_app:app inspect ping -d celery@$HOSTNAME
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 60
          resources:
            {}
      volumes:
        - name: superset-config
          secret:
            secretName: superset-local-config

---
# Source: superset/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-local
  namespace: superset
  labels:
    app: superset
    chart: superset-0.15.5
    release: superset-local
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset
      release: superset-local
  template:
    metadata:
      annotations:
        # Force reload on config changes
        checksum/superset_config.py: b28993e506479bd683b1eb5335831c90eacf0d9523978922830c0d2e3ea024f4
        checksum/superset_init.sh: c01e9d540597f2cbb893944ee7fca13249496005fb455d42e7e6ce3b078db349
        checksum/superset_bootstrap.sh: ed4f5aab1a7cac42bd79b9acf8eadc7f63b229830a7ef5edeeff05a30cda77dd
        checksum/connections: 10c5fbc7d42f4fdeac36ee316797cc0db4f98e5751c068b10f1363c528d697ef
        checksum/extraConfigs: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/extraSecrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        checksum/extraSecretEnv: e527aea4caa9fa8a34ed43dc96ff8576e87db9133fed0faf8b0828c7cd179eac
        checksum/configOverrides: 70c7efb3e8d995bed29fa5c2a5e4bb1b188f7b00528992f585ac0155c808a81a
        checksum/configOverridesFiles: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
      labels:
        app: superset
        release: superset-local
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: superset
          image: "apachesuperset.docker.scarf.sh/apache/superset:5.0.0"
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh","-c",". /app/pythonpath/superset_bootstrap.sh; /usr/bin/run-server.sh"]
          volumeMounts:
            - name: superset-config
              mountPath: "/app/pythonpath"
              readOnly: true
          ports:
            - name: http
              containerPort: 8088
              protocol: TCP
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            {}
      volumes:
        - name: superset-config
          secret:
            secretName: superset-local-config

---
# Source: superset/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: superset-local-postgresql
  namespace: "superset"
  labels:
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.6.0
    helm.sh/chart: postgresql-16.7.27
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  serviceName: superset-local-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: superset-local
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: superset-local-postgresql
      labels:
        app.kubernetes.io/instance: superset-local
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/version: 17.6.0
        helm.sh/chart: postgresql-16.7.27
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: superset-local-postgresql

      automountServiceAccountToken: false
      affinity:
        podAffinity:

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: superset-local
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:

      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnamilegacy/postgresql:14.17.0-debian-12-r3
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "superset" -d "dbname=superset" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "superset" -d "dbname=superset" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/postgresql/tmp
              subPath: app-tmp-dir
            - name: postgresql-password
              mountPath: /opt/bitnami/postgresql/secrets/
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: postgresql-password
          secret:
            secretName: superset-local-postgresql
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "10Gi"
        storageClassName: local-path

---
# Source: superset/charts/redis/templates/master/application.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: superset-local-redis-master
  namespace: "superset"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-17.9.4
    app.kubernetes.io/instance: superset-local
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "7.0.10"
    app.kubernetes.io/component: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: superset-local
      app.kubernetes.io/component: master
  serviceName: superset-local-redis-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        helm.sh/chart: redis-17.9.4
        app.kubernetes.io/instance: superset-local
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "7.0.10"
        app.kubernetes.io/component: master
      annotations:
        checksum/configmap: ed67166a7cd673a7bb021547b5a8a515535f18b48dc44c4da1f54ad0e977b3a1
        checksum/health: f64d109bfd627a5db6aade28f0e05a4b330fc7180c93de8ad56898ded4979956
        checksum/scripts: c93ae41408ee5ecd7940c471e7f7272c1e16b8c95ba962e30f9b4222ad38d78f
        checksum/secret: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:

      securityContext:
        fsGroup: 1001
      serviceAccountName: superset-local-redis
      affinity:
        podAffinity:

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: superset-local
                    app.kubernetes.io/name: redis
                    app.kubernetes.io/component: master
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:

      terminationGracePeriodSeconds: 30
      containers:
        - name: redis
          image: docker.io/bitnamilegacy/redis:7.0.10-debian-11-r4
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          command:
            - /bin/bash
          args:
            - -c
            - /opt/bitnami/scripts/start-scripts/start-master.sh
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            # One second longer than command timeout should prevent generation of zombie processes.
            timeoutSeconds: 6
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 1
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: start-scripts
              mountPath: /opt/bitnami/scripts/start-scripts
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: redis-tmp-conf
              mountPath: /opt/bitnami/redis/etc/
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: start-scripts
          configMap:
            name: superset-local-redis-scripts
            defaultMode: 0755
        - name: health
          configMap:
            name: superset-local-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: superset-local-redis-configuration
        - name: redis-tmp-conf
          emptyDir: {}
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app.kubernetes.io/name: redis
          app.kubernetes.io/instance: superset-local
          app.kubernetes.io/component: master
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "5Gi"
        storageClassName: local-path
